<resources>
    <string name="app_name">Quiz</string>
    <string name="ques1ch1">25</string>
    <string name="ques1ch2">26</string>
    <string name="ques1ch3">29</string>
    <string name="ques1ch4">30</string>
    <string name="ques3ch1">Delhi</string>
    <string name="ques3ch2">Mumbai</string>
    <string name="ques3ch3">Chennai</string>
    <string name="ques3ch4">Bangluru</string>
    <string name="ques4ch1">Orange</string>
    <string name="ques4ch2">White</string>
    <string name="ques4ch3">Yellow</string>
    <string name="ques4ch4">Green</string>
    <string name="ques5ch1">Dr. Manmohan Singh</string>
    <string name="ques5ch2">Atal Bihari Vajpayee</string>
    <string name="ques5ch3">I.K. Gujral</string>
    <string name="ques5ch4">Narendra Modi</string>
    <string name="ques6ch1">Sahib Singh Verma</string>
    <string name="ques6ch2">Arvind Kejriwal</string>
    <string name="ques6ch3">Shelia Dikshit</string>
    <string name="ques6ch4">Sushma Swaraj</string>
    <string name="ques7ch1">Arun Jaitley</string>
    <string name="ques7ch2">Dr. Manmohan Singh</string>
    <string name="ques7ch3">P. Chidambaram</string>
    <string name="ques7ch4">Pranab Mukherjee</string>
    <string name="ques8ch1">Yalung kang</string>
    <string name="ques8ch2">Nanda Devi</string>
    <string name="ques8ch3">K2</string>
    <string name="ques8ch4">Kamet</string>
    <string name="ques9ch1">Sachin Tendulkar</string>
    <string name="ques9ch2">Saurav Ganguly</string>
    <string name="ques9ch3">Mahrendra Singh Dhoni</string>
    <string name="ques9ch4">Virat Kohli</string>
    <string name="ques10ch1">Cricket</string>
    <string name="ques10ch2">Hockey</string>
    <string name="ques10ch3">Football</string>
    <string name="ques10ch4">BasketBall</string>
    <string name="textbox">Type your answer here</string>
    <string name="submitBut">Submit</string>
</resources>
